RESOLVED FIXED120286
[GTK] Fix compile warning in WebKitDOMCustom
https://bugs.webkit.org/show_bug.cgi?id=120286
Summary [GTK] Fix compile warning in WebKitDOMCustom
Carlos Garcia Campos
Reported 2013-08-26 00:30:19 PDT
../../Source/WebCore/bindings/gobject/WebKitDOMCustom.cpp: In function 'void* webkit_dom_html_element_get_item_type(WebKitDOMHTMLElement*)': ../../Source/WebCore/bindings/gobject/WebKitDOMCustom.cpp:235:1: warning: no return statement in function returning non-void [-Wreturn-type]
Attachments
Trivial fix (1.19 KB, patch)
2013-08-26 00:31 PDT, Carlos Garcia Campos
pnormand: review+
Carlos Garcia Campos
Comment 1 2013-08-26 00:31:47 PDT
Created attachment 209620 [details] Trivial fix
Carlos Garcia Campos
Comment 2 2013-08-26 00:44:18 PDT
Note You need to log in before you can comment on or make changes to this bug.