[GTK] Fix compile warning in WebKitDOMCustom https://bugs.webkit.org/show_bug.cgi?id=120286

Reviewed by Philippe Normand.

* bindings/gobject/WebKitDOMCustom.cpp:
(webkit_dom_html_element_get_item_type): Add return 0.

Canonical link: https://commits.webkit.org/138242@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154588 268f45cc-cd09-0410-ab3c-d52691b4dbfc